--- a/styles.css
+++ b/styles.css
@@ -967,10 +967,9 @@ body {
 
 /* YouTube Cover Photo */
 .youtube-cover-photo {
-    width: calc(100% + 30px);
-    height: 150px;
-    object-fit: contain; /* Changed from cover to contain */
-    background-color: black; /* Add background color to handle letterboxing */
+    width: 100%;
+    max-height: 150px;
+    object-fit: contain;
     margin: -15px -15px 15px -15px;
     display: block;
     border-top-left-radius: 10px;
@@ -1179,8 +1178,8 @@ body {
     }
 
     .youtube-cover-photo {
-        width: calc(100% + 24px);
         margin: -12px -12px 12px -12px;
+        max-height: 120px;
     }
 
     .username-container,
@@ -1220,8 +1219,8 @@ body {
     }
 
     .youtube-cover-photo {
-        width: calc(100% + 20px);
         margin: -10px -10px 10px -10px;
+        max-height: 100px;
     }
 
     .username-container,
